// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scaffold file tree snapshots > all features enabled 1`] = `
[
  ".dev.vars.example",
  ".gitignore",
  ".oxfmtrc.json",
  ".oxlintrc.json",
  "AGENTS.md",
  "app/components/ui/avatar.tsx",
  "app/components/ui/badge.tsx",
  "app/components/ui/button.tsx",
  "app/components/ui/card.tsx",
  "app/components/ui/checkbox.tsx",
  "app/components/ui/dialog.tsx",
  "app/components/ui/dropdown-menu.tsx",
  "app/components/ui/input.tsx",
  "app/components/ui/label.tsx",
  "app/components/ui/select.tsx",
  "app/components/ui/separator.tsx",
  "app/components/ui/sheet.tsx",
  "app/components/ui/sonner.tsx",
  "app/components/ui/table.tsx",
  "app/components/ui/tabs.tsx",
  "app/components/user-menu.tsx",
  "app/contexts.ts",
  "app/crons/cleanup-sessions.ts",
  "app/crons/cleanup-verifications.ts",
  "app/crons/index.ts",
  "app/entry.server.tsx",
  "app/hooks/use-auth-user.ts",
  "app/lib/client-hints.ts",
  "app/lib/config.ts",
  "app/lib/utils.ts",
  "app/lib/validations/auth.ts",
  "app/middlewares/auth.ts",
  "app/middlewares/index.ts",
  "app/middlewares/logger.ts",
  "app/middlewares/request-id.ts",
  "app/middlewares/trailing-slash.ts",
  "app/queues/email.ts",
  "app/queues/index.ts",
  "app/queues/schemas.ts",
  "app/root.tsx",
  "app/routes.ts",
  "app/routes/admin/dashboard.tsx",
  "app/routes/admin/layout.tsx",
  "app/routes/admin/users/index.tsx",
  "app/routes/api/better-error.tsx",
  "app/routes/api/better.tsx",
  "app/routes/api/theme-switcher.ts",
  "app/routes/auth/forget-password.tsx",
  "app/routes/auth/reset-password.tsx",
  "app/routes/auth/sign-in.tsx",
  "app/routes/auth/sign-out.tsx",
  "app/routes/auth/sign-up.tsx",
  "app/routes/images.ts",
  "app/routes/index.tsx",
  "app/routes/layout.tsx",
  "app/routes/not-found.tsx",
  "app/routes/settings/account.tsx",
  "app/routes/settings/appearance.tsx",
  "app/routes/settings/connections.tsx",
  "app/routes/settings/layout.tsx",
  "app/routes/settings/password.tsx",
  "app/routes/settings/sessions.tsx",
  "app/routes/todos.tsx",
  "app/services/auth/auth.server.ts",
  "app/services/auth/client.ts",
  "app/services/auth/permissions.ts",
  "app/services/db.server.ts",
  "app/services/email.server.ts",
  "app/services/env.server.ts",
  "app/services/logger.server.ts",
  "app/services/r2.server.ts",
  "app/services/theme.server.ts",
  "app/services/toast.server.ts",
  "app/styles/app.css",
  "commitlint.config.cjs",
  "components.json",
  "drizzle.config.ts",
  "drizzle/migrations/0000_initial.sql",
  "drizzle/schema/auth.ts",
  "drizzle/schema/index.ts",
  "drizzle/schema/todo.ts",
  "drizzle/seed/reset.ts",
  "drizzle/seed/seed.sql",
  "drizzle/seed/seed.ts",
  "lefthook.yml",
  "package.json",
  "react-router.config.ts",
  "tsconfig.json",
  "vite.config.ts",
  "worker-configuration.d.ts",
  "workers/app.ts",
  "wrangler.jsonc",
]
`;

exports[`scaffold file tree snapshots > minimal - no optional features 1`] = `
[
  ".dev.vars.example",
  ".gitignore",
  ".oxfmtrc.json",
  ".oxlintrc.json",
  "AGENTS.md",
  "app/components/ui/avatar.tsx",
  "app/components/ui/badge.tsx",
  "app/components/ui/button.tsx",
  "app/components/ui/card.tsx",
  "app/components/ui/checkbox.tsx",
  "app/components/ui/dialog.tsx",
  "app/components/ui/dropdown-menu.tsx",
  "app/components/ui/input.tsx",
  "app/components/ui/label.tsx",
  "app/components/ui/select.tsx",
  "app/components/ui/separator.tsx",
  "app/components/ui/sheet.tsx",
  "app/components/ui/sonner.tsx",
  "app/components/ui/table.tsx",
  "app/components/ui/tabs.tsx",
  "app/components/user-menu.tsx",
  "app/contexts.ts",
  "app/entry.server.tsx",
  "app/hooks/use-auth-user.ts",
  "app/lib/client-hints.ts",
  "app/lib/config.ts",
  "app/lib/utils.ts",
  "app/lib/validations/auth.ts",
  "app/middlewares/auth.ts",
  "app/middlewares/index.ts",
  "app/middlewares/logger.ts",
  "app/middlewares/request-id.ts",
  "app/middlewares/trailing-slash.ts",
  "app/root.tsx",
  "app/routes.ts",
  "app/routes/api/better-error.tsx",
  "app/routes/api/better.tsx",
  "app/routes/api/theme-switcher.ts",
  "app/routes/auth/forget-password.tsx",
  "app/routes/auth/reset-password.tsx",
  "app/routes/auth/sign-in.tsx",
  "app/routes/auth/sign-out.tsx",
  "app/routes/auth/sign-up.tsx",
  "app/routes/index.tsx",
  "app/routes/layout.tsx",
  "app/routes/not-found.tsx",
  "app/routes/settings/account.tsx",
  "app/routes/settings/appearance.tsx",
  "app/routes/settings/connections.tsx",
  "app/routes/settings/layout.tsx",
  "app/routes/settings/password.tsx",
  "app/routes/settings/sessions.tsx",
  "app/services/auth/auth.server.ts",
  "app/services/auth/client.ts",
  "app/services/db.server.ts",
  "app/services/email.server.ts",
  "app/services/env.server.ts",
  "app/services/logger.server.ts",
  "app/services/theme.server.ts",
  "app/services/toast.server.ts",
  "app/styles/app.css",
  "commitlint.config.cjs",
  "components.json",
  "drizzle.config.ts",
  "drizzle/migrations/0000_initial.sql",
  "drizzle/schema/auth.ts",
  "drizzle/schema/index.ts",
  "drizzle/seed/reset.ts",
  "drizzle/seed/seed.sql",
  "drizzle/seed/seed.ts",
  "lefthook.yml",
  "package.json",
  "react-router.config.ts",
  "tsconfig.json",
  "vite.config.ts",
  "worker-configuration.d.ts",
  "workers/app.ts",
  "wrangler.jsonc",
]
`;

exports[`scaffold file tree snapshots > mixed - todos + cron, no admin/R2/queues 1`] = `
[
  ".dev.vars.example",
  ".gitignore",
  ".oxfmtrc.json",
  ".oxlintrc.json",
  "AGENTS.md",
  "app/components/ui/avatar.tsx",
  "app/components/ui/badge.tsx",
  "app/components/ui/button.tsx",
  "app/components/ui/card.tsx",
  "app/components/ui/checkbox.tsx",
  "app/components/ui/dialog.tsx",
  "app/components/ui/dropdown-menu.tsx",
  "app/components/ui/input.tsx",
  "app/components/ui/label.tsx",
  "app/components/ui/select.tsx",
  "app/components/ui/separator.tsx",
  "app/components/ui/sheet.tsx",
  "app/components/ui/sonner.tsx",
  "app/components/ui/table.tsx",
  "app/components/ui/tabs.tsx",
  "app/components/user-menu.tsx",
  "app/contexts.ts",
  "app/crons/cleanup-sessions.ts",
  "app/crons/cleanup-verifications.ts",
  "app/crons/index.ts",
  "app/entry.server.tsx",
  "app/hooks/use-auth-user.ts",
  "app/lib/client-hints.ts",
  "app/lib/config.ts",
  "app/lib/utils.ts",
  "app/lib/validations/auth.ts",
  "app/middlewares/auth.ts",
  "app/middlewares/index.ts",
  "app/middlewares/logger.ts",
  "app/middlewares/request-id.ts",
  "app/middlewares/trailing-slash.ts",
  "app/root.tsx",
  "app/routes.ts",
  "app/routes/api/better-error.tsx",
  "app/routes/api/better.tsx",
  "app/routes/api/theme-switcher.ts",
  "app/routes/auth/forget-password.tsx",
  "app/routes/auth/reset-password.tsx",
  "app/routes/auth/sign-in.tsx",
  "app/routes/auth/sign-out.tsx",
  "app/routes/auth/sign-up.tsx",
  "app/routes/index.tsx",
  "app/routes/layout.tsx",
  "app/routes/not-found.tsx",
  "app/routes/settings/account.tsx",
  "app/routes/settings/appearance.tsx",
  "app/routes/settings/connections.tsx",
  "app/routes/settings/layout.tsx",
  "app/routes/settings/password.tsx",
  "app/routes/settings/sessions.tsx",
  "app/routes/todos.tsx",
  "app/services/auth/auth.server.ts",
  "app/services/auth/client.ts",
  "app/services/db.server.ts",
  "app/services/email.server.ts",
  "app/services/env.server.ts",
  "app/services/logger.server.ts",
  "app/services/theme.server.ts",
  "app/services/toast.server.ts",
  "app/styles/app.css",
  "commitlint.config.cjs",
  "components.json",
  "drizzle.config.ts",
  "drizzle/migrations/0000_initial.sql",
  "drizzle/schema/auth.ts",
  "drizzle/schema/index.ts",
  "drizzle/schema/todo.ts",
  "drizzle/seed/reset.ts",
  "drizzle/seed/seed.sql",
  "drizzle/seed/seed.ts",
  "lefthook.yml",
  "package.json",
  "react-router.config.ts",
  "tsconfig.json",
  "vite.config.ts",
  "worker-configuration.d.ts",
  "workers/app.ts",
  "wrangler.jsonc",
]
`;
